--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,15 +26,17 @@ requirements:
   run:
     - python >=3.8
     - click >=8.1.3,<8.2
-    - numpy >=1.22,<1.24
+    - numpy >=1.24,<1.26
     - datalad >=0.15.4,<0.19
     - pandas >=1.4.0,<1.6
     - nibabel >=3.2.0,<4.1
     - nilearn >=0.9.0,<=0.10.0
     - sqlalchemy >=1.4.27,<=1.5.0
-    - pyyaml >=5.1.2,<7.0
+    - ruamel.yaml >=0.17,<0.18
     - importlib-metadata
-    - h5py >=3.8.0,<3.9
+    - h5py >=3.8.0,<3.9  #
+# Extra: onthefly
+    - bctpy >=0.6.0,<0.7.0
 
 test:
   imports:
